# RealityFrame

./: .gitignore  LICENSE  main.py  pyproject.toml  readme.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
core/: ar_canvas.py  background.py  compositor.py  custom_background.py  video_capture.py  virtual_cam.py  zoom.py
graphics/: renderer.py
vision/: gesture.py  portal_detector.py  pose_tracker.py
