[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RealityFrame"
version = "0.1.0"
description = "AR virtual webcam and compositing app"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.9",
    "numpy>=1.24.0",
    "pyvirtualcam>=0.10.2"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy"
]

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
strict = false
